# OMAGAHH

./: .gitignore  Anchor.toml  BEFORE_AFTER_COMPARISON.md  FINAL_CARD_REDESIGN.md  GAMES_BEFORE_AFTER.md  GAMES_SECTION_IMPROVEMENTS.md  GAME_CARDS_ENHANCEMENT.md  IMPLEMENTATION_COMPLETE.md  IMPROVEMENTS_SUMMARY.md  NAVBAR_DASHBOARD_IMPROVEMENTS.md  QUICK_START.md  SMART_CONTRACT_SETUP.md  YOUR_NEXT_STEPS.md  index.html  new.txt  package-lock.json  package.json  show-casino-info.sh  vite.config.ts
programs/casino/: Cargo.toml
programs/casino/src/: lib.rs  lib_complex.rs  lib_simple.rs
scripts/: fund-vault.js  init-casino.js
src/: App.tsx  main.tsx  polyfills.ts  routes.tsx
src/components/: Hero.tsx  Navbar.tsx  WalletProvider.tsx
src/components/dashboard/: RecentGames.tsx  TopTokens.tsx
src/components/games/: GameSelector3D.tsx  UltraCoinFlip.tsx  UltraDiceRoll.tsx  UltraSlots.tsx
src/components/leaderboard/: AdvancedLeaderboard.tsx
src/components/ui/: StatCard.tsx  button.tsx  card.tsx
src/hooks/: useBlockchain.ts  useEnhancedGame.ts
src/lib/: casino-program-simple.ts  casino-program.ts
src/pages/: About.tsx  CasinoCreator.tsx  Dashboard.tsx  InitializeCasino.tsx
src/styles/: scrollbar.css
src/test/: setup.ts
src/utils/: admin.ts
