[package]
name = "solsgames"
version = "0.1.0"
description = "Solsgame Smart Contract"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "casino"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = [] }

[profile.release]
overflow-checks = true
